--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -339,7 +339,7 @@
                     class="absolute inset-0 w-full h-full object-cover z-10"
                     controls
                     autoplay>
-                    <source src="/assects/home/testimonials/story video.mp4" type="video/mp4">
+                    <!-- <source src="/assects/home/testimonials/story video.mp4" type="video/mp4"> -->
                     Your browser does not support the video tag.
                 </video>
 
