inside section modify

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -384,7 +384,7 @@
                 <img src="/assects/home/testimonials/US Defense.png" alt="US Defense" class="h-24 object-contain">
             </div>
             <div class="h-28 flex items-center">
-                <img src="/assects/home/testimonials/Fedral government.jpeg" alt="Federal Government" class="h-24 object-contain">
+                <img src="/assects/home/testimonials/Fedral_government-removebg-preview.png" alt="Federal Government" class="h-24 object-contain">
             </div>
         </div>
         <div class="flex flex-col sm:flex-row justify-center items-center gap-6">
